# SHARC-Buoy

./: .gitmodules  CMakeLists.txt  README.md
CMake/: arm-none-eabi.cmake  mcu.cmake  scripts.cmake  stm32cubel4.cmake
CubeMX/: STM32L4R5ZITXP_FLASH.ld
Inc/: stm32l4xx_hal_conf.h  stm32l4xx_it.h
Libraries/: CMakeLists.txt
Libraries/CMake/: fatfs.cmake  sd.cmake  spi_cam.cmake
Src/: CMakeLists.txt  main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
